data_model/tests/ui_fail/evaluates_to.stderr
error[E0277]: the trait bound `iroha_data_model::account::Id: From<DefinitionId>` is not satisfied
  --> tests/ui_fail/evaluates_to.rs:11:30
   |
11 |     get_assets_by_account_id(asset_definition_id);
   |     ------------------------ ^^^^^^^^^^^^^^^^^^^ the trait `From<DefinitionId>` is not implemented for `iroha_data_model::account::Id`
   |     |
   |     required by a bound introduced by this call
   |
   = note: required because of the requirements on the impl of `Into<iroha_data_model::account::Id>` for `DefinitionId`
   = note: required because of the requirements on the impl of `From<DefinitionId>` for `iroha_data_model::expression::EvaluatesTo<iroha_data_model::account::Id>`
   = note: 1 redundant requirement hidden
   = note: required because of the requirements on the impl of `Into<iroha_data_model::expression::EvaluatesTo<iroha_data_model::account::Id>>` for `DefinitionId`
note: required by a bound in `get_assets_by_account_id`
  --> tests/ui_fail/evaluates_to.rs:5:47
   |
5  | fn get_assets_by_account_id(_account_id: impl Into<EvaluatesTo<AccountId>>) -> Vec<Asset> {
   |                                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `get_assets_by_account_id`
